Fixed alignment in footer and cleaned up design

--- a/assets/style.css
+++ b/assets/style.css
@@ -83,14 +83,24 @@ body {
 
 /*-- Footer Section --*/
 
+/* .footer {
+    padding: 5rem;
+} */
+
 .bg-footer {
     background-color:#2b2b2b;
     color: white;
-    height: 100px;
+    min-height: 100px;
+    padding: 3rem;
 }
 
 .social-links li a i {
-    width: 32px;
-    height: 32px;
+    width: 42px;
+    height: 42px;
+    font-size: 1.5rem;
     color: #fafafa;
+}
+
+.copyright {
+    color: #797979;
 }
